--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World
+<html>
+<head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js">
+	<title>Hey</title>
+</head>
+<body>
+	<script>
+	$.ajax({
+  url:'https://spreadsheets.google.com/feeds/list/1CVtxktOSZxUmDCR8zEdGA5xEdNpB2sK2MtSXC-JIdOU/1/public/basic?alt=json-in-script&callback=JSON_CALLBACK',
+  success: function(data){
+    console.log(data);
+  }
+});
+	</script>
+
+</body>
+</html>
+
