--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Hey</title>
 </head>
 <body>
-	<p><a href="https://docs.google.com/forms/d/1ejZAk8NJhe_dTJbabLPglieQmf68L1K7F03Ilh42PyQ/viewform">Enter more data.</a></p>
+	<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSea6a1NKX9cWEuB-HPmfiwG_lYa-OqeB26G_7HTKXTqIEpo6Q/viewform">Enter more data.</a></p>
 
 	<div id="chart">
 	</div>
@@ -30,6 +30,7 @@
 	            rowObj[keyVal[0].trim()] = keyVal[1].trim();
 	        }
 	        rows.push(rowObj);
+	        console.log(rowObj.leadsource)
 	    }
 	    
 	    var raw = document.createElement('p');
