--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	    raw.innerText = JSON.stringify(rows);
 	    document.body.appendChild(raw);
 
-	    consolel.log(leadsources);
+	    console.log(leadsources);
 	}
 
 	$(document).ready(function(){
