--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	        }]
 	    },
 	    options: {
+	    	responsive: true,
 	        scales: {
 	            yAxes: [{
 	                ticks: {
