--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 	<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSea6a1NKX9cWEuB-HPmfiwG_lYa-OqeB26G_7HTKXTqIEpo6Q/viewform">Enter more data.</a></p>
 
+	<div style="max-width: 400px">
+
 	<canvas id="myChart" width="200" height="200"></canvas>
 	<script>
 	var ctx = document.getElementById("myChart");
@@ -50,6 +52,8 @@
 	    }
 	});
 	</script>
+
+	</div>
 
 	<script>
 
