--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		    data: {
 		        labels: xaxis,
 		        datasets: [{
-		            label: '# of Votes',
+		            label: '# of Leads Generated',
 		            data: counts,
 		            backgroundColor: [
 		                'rgba(255, 99, 132, 0.2)',
@@ -106,7 +106,8 @@
 		        scales: {
 		            yAxes: [{
 		                ticks: {
-		                    beginAtZero:true
+		                    beginAtZero: true,
+		                    stepSize: 1
 		                }
 		            }]
 		        }
