--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 	        }
 	        rows.push(rowObj);
 
+	        console.log('timestamp', rowObj.timestamp);
 	        searchAndIncrementOrAdd(rowObj.leadsource);
 	    }
 	    
