--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	        console.log('timestamp', rowObj.timestamp);
 
-	        if (d < compare){
+	        if (d > compare){
 	        	console.log('is less', d);
 	        	searchAndIncrementOrAdd(rowObj.leadsource);
 	        }
