--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 	        var d = new Date(rowObj.timestamp);
 	        var compare = new Date('7/19/2016 1:11:55');
 
+	        console.log('19th was', compare.getDay())
+
 	        console.log('timestamp', rowObj.timestamp);
 
 	        if (d > compare){
