--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 	        var d = new Date(rowObj.timestamp);
 	        var compare = new Date();
 	        var dayNumber = compare.getDay();
+	        compare.setDate(compare - dayNumber);
 
-	        console.log('today is', dayNumber)
+	        console.log('the day is', compare.getDay())
 
 	        console.log('timestamp', rowObj.timestamp);
 
