--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<canvas id="myChart" width="200" height="200"></canvas>
 	</div>
 
-	<div style="max-width: 100px; margin: auto">
+	<div style="max-width: 200px; margin: auto; margin-top: 100px;">
 		<canvas id="myPieChart" width="100" height="100"></canvas>
 	</div>
 
