--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Property Solutions Team</title>
 </head>
-<body>
+<body style="margin-top: 20px">
 
 	<h2 style="text-align: center">Property Solutions Team Scoreboard</h2>
 
@@ -14,7 +14,7 @@
 		<canvas id="myChart" width="200" height="200"></canvas>
 	</div>
 
-	<div style="max-width: 200px; margin: auto; margin-top: 100px;">
+	<div style="max-width: 200px; margin: auto; margin-top: 20px;">
 		<canvas id="myPieChart" width="100" height="100"></canvas>
 	</div>
 
